undeprecated appdata install paths
deprecated: /usr/share/appdata/GammaRay.appdata.xml
modern way: /usr/share/metainfo/com.kdab.GammaRay.metainfo.xml

Task-number: 633

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -649,7 +649,7 @@ else()
   set(DATAROOTDIR "${CMAKE_INSTALL_DATAROOTDIR}" CACHE PATH "Define install directory for read-only architecture-independent data")
   gammaray_convert_to_relative_path(DATAROOTDIR)
   set(XDG_APPS_INSTALL_DIR "${DATAROOTDIR}/applications")
-  set(APPDATA_INSTALL_DIR "${DATAROOTDIR}/appdata")
+  set(APPDATA_INSTALL_DIR "${DATAROOTDIR}/metainfo")
   set(ICON_INSTALL_DIR "${DATAROOTDIR}/icons")
   set(MAN_INSTALL_DIR "${DATAROOTDIR}/man/man1")
   set(QCH_INSTALL_DIR "${CMAKE_INSTALL_DOCDIR}" CACHE PATH "Install location of Qt Assistant help files.")
@@ -766,7 +766,7 @@ list(APPEND DOCS ${LICENSE_FILE} ${README_FILE} "LICENSE.txt")
 if(NOT APPLE AND NOT GAMMARAY_PROBE_ONLY_BUILD)
   if(UNIX AND GAMMARAY_BUILD_UI)
     install(FILES GammaRay.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
-    install(FILES GammaRay.appdata.xml DESTINATION ${APPDATA_INSTALL_DIR})
+    install(FILES com.kdab.GammaRay.metainfo.xml DESTINATION ${APPDATA_INSTALL_DIR})
   endif()
   install(FILES ${DOCS} DESTINATION ${DOC_INSTALL_DIR})
 endif()
