cmake: Set CMP0076 to fix cmake warning
Warning was:

```
CMake Warning (dev) at plugins/qmlsupport/CMakeLists.txt:24 (target_sources):
  Policy CMP0076 is not set: target_sources() command converts relative paths
  to absolute.  Run "cmake --help-policy CMP0076" for policy details.  Use
  the cmake_policy command to set the policy and suppress this warning.

  An interface source of target "gammaray_qmlsupport" has a relative path.
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,10 @@
 
 cmake_minimum_required(VERSION 3.11.0)
 
+if(POLICY CMP0076)
+  cmake_policy(SET CMP0076 NEW)
+endif()
+
 project(GammaRay CXX C)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
