cmake: Set CMP0076 to fix cmake warning
Warning was:

```
CMake Warning (dev) at plugins/qmlsupport/CMakeLists.txt:24 (target_sources):
  Policy CMP0076 is not set: target_sources() command converts relative paths
  to absolute.  Run "cmake --help-policy CMP0076" for policy details.  Use
  the cmake_policy command to set the policy and suppress this warning.

  An interface source of target "gammaray_qmlsupport" has a relative path.
```

(cherry picked from commit 188d5b19883471028125a823421068f776500b5a)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,9 @@ endif()
 if(POLICY CMP0068)
   cmake_policy(SET CMP0068 NEW)
 endif()
+if(POLICY CMP0076)
+  cmake_policy(SET CMP0076 NEW)
+endif()
 
 project(GammaRay CXX C)
 
