Allow building with Qt6 using cmake -DGAMMARAY_QT6_BUILD
Can be removed if not the best way to do it, but good for testing with
Qt5 quickly for now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -355,6 +355,18 @@ endif()
 find_package(Qt 5.5 NAMES Qt6 Qt5 COMPONENTS Core NO_MODULE REQUIRED)
 
 set_package_properties(Qt${Qt_VERSION_MAJOR}Core PROPERTIES TYPE REQUIRED)
+
+gammaray_option(
+  GAMMARAY_QT6_BUILD
+  "Build with Qt6."
+  OFF
+)
+
+if (GAMMARAY_QT6_BUILD)
+    set(Qt_VERSION_MAJOR 6)
+    set(QT_MIN_VERSION "6.0.0")
+endif()
+
 find_package(Qt${Qt_VERSION_MAJOR} NO_MODULE REQUIRED COMPONENTS Gui Network)
 find_package(Qt${Qt_VERSION_MAJOR} NO_MODULE QUIET OPTIONAL_COMPONENTS
   3DAnimation
