Allow capturing response for network operations
The Network Operations tab now contains a checkbox that allows the user
to enable collection of the response body for network replies.

To begin with, we only only collect up to 5MiB of data. In the future we
might make this configurable, and maybe even allow the user to whitelist
to specific Content-Type values.

--- a/plugins/network/CMakeLists.txt
+++ b/plugins/network/CMakeLists.txt
@@ -2,6 +2,7 @@
 if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
 set(gammaray_network_srcs
     networksupport.cpp
+    networksupportinterface.cpp
     networkinterfacemodel.cpp
     networkreplymodel.cpp
 
@@ -24,6 +25,8 @@ if(GAMMARAY_BUILD_UI)
     clientnetworkconfigurationmodel.cpp
     networkreplywidget.cpp
     clientnetworkreplymodel.cpp
+    networksupportinterface.cpp
+    networksupportclient.cpp
 
     cookies/cookietab.cpp
   )
