--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,10 @@ if(POLICY CMP0076)
   cmake_policy(SET CMP0076 NEW)
 endif()
 
-project(GammaRay CXX C)
+project(GammaRay
+  VERSION 2.99.50
+  LANGUAGES CXX C
+)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ECM/modules)
@@ -136,10 +139,10 @@ set(GAMMARAY_REQUIRED_CXX_FEATURES
 )
 
 # Version setup
-set(GAMMARAY_VERSION_MAJOR "2")
-set(GAMMARAY_VERSION_MINOR "99")
-set(GAMMARAY_VERSION_PATCH "50")
-set(GAMMARAY_VERSION "${GAMMARAY_VERSION_MAJOR}.${GAMMARAY_VERSION_MINOR}.${GAMMARAY_VERSION_PATCH}")
+set(GAMMARAY_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+set(GAMMARAY_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+set(GAMMARAY_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+set(GAMMARAY_VERSION ${PROJECT_VERSION})
 set(GAMMARAY_VERSION_STRING "${GAMMARAY_VERSION}")
 set(GAMMARAY_SOVERSION "3.0.0")
 set(GAMMARAY_PLUGIN_VERSION "3.0")
