guard glslang_validate_program() calls with Glslang_FOUND
Issue#674

--- a/plugins/qt3dinspector/geometryextension/gl3/CMakeLists.txt
+++ b/plugins/qt3dinspector/geometryextension/gl3/CMakeLists.txt
@@ -1,3 +1,5 @@
-glslang_validate_program(passthrough.vert normals.geom normals.frag)
-glslang_validate_program(wireframe.vert wireframe.geom wireframe.frag)
-glslang_validate_program(skybox.vert skybox.frag)
+if(Glslang_FOUND)
+  glslang_validate_program(passthrough.vert normals.geom normals.frag)
+  glslang_validate_program(wireframe.vert wireframe.geom wireframe.frag)
+  glslang_validate_program(skybox.vert skybox.frag)
+endif()
