--- a/plugins/qt3dinspector/geometryextension/es2/CMakeLists.txt
+++ b/plugins/qt3dinspector/geometryextension/es2/CMakeLists.txt
@@ -1,3 +1,5 @@
-glslang_validate_program(skybox.vert skybox.frag)
-glslang_validate_program(surface.vert surface.frag)
-glslang_validate_program(wireframe.vert wireframe.frag)
+if(Glslang_FOUND)
+  glslang_validate_program(skybox.vert skybox.frag)
+  glslang_validate_program(surface.vert surface.frag)
+  glslang_validate_program(wireframe.vert wireframe.frag)
+endif()
