--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,8 +365,6 @@ gammaray_option(
 if (GAMMARAY_QT6_BUILD)
     set(Qt_VERSION_MAJOR 6)
     set(QT_MIN_VERSION "6.0.0")
-
-    add_definitions(-DGAMMARAY_QT6_TODO)
 endif()
 
 find_package(Qt${Qt_VERSION_MAJOR} NO_MODULE REQUIRED COMPONENTS Gui Network)
@@ -411,6 +409,12 @@ endif()
 if(${Qt_VERSION_MAJOR} GREATER_EQUAL 6)
   set(CMAKE_CXX_STANDARD 17)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
+  add_definitions(-DGAMMARAY_QT6_TODO)
+
+  if (MSVC)
+    add_compile_options(/Zc:__cplusplus)
+  endif()
+
 endif()
 
 # these need to included after the last Qt-related find_package() call
