--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,6 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-- repo: ssh://allen@codereview.kdab.com:29418/kdab/KDToolBox-internal/pre-commit-hooks
-  rev: v0.0
-  hooks:
-  - id: krazy
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v3.2.0
   hooks:
@@ -14,10 +10,10 @@ repos:
   - id: check-case-conflict
   - id: check-yaml
   - id: check-json
-- repo: https://github.com/pre-commit/mirrors-clang-format
-  rev: v13.0.0
-  hooks:
-  - id: clang-format
+#- repo: https://github.com/pre-commit/mirrors-clang-format
+#  rev: v13.0.0
+#  hooks:
+#  - id: clang-format
 - repo: https://github.com/PyCQA/pylint
   rev: v2.12.2
   hooks:
