Implement Object Favorite-ing
Gammaray shows huge lists of object usually but as a user, a person
is often only interest in a small set of objects. It becomes really
hard to switch between two objects.

Favorite-ing aims to make it easier. You can mark an object as favorite
and it will appear in a view above the current itemview. However, this
needs to be added to each itemview individually. This commit only
implements it for the Signals history view.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -15,6 +15,7 @@ set(gammaray_clientlib_srcs
   remoteviewclient.cpp
   enumrepositoryclient.cpp
   classesiconsrepositoryclient.cpp
+  favoriteobjectclient.cpp
   ${CMAKE_SOURCE_DIR}/resources/gammaray.qrc
 )
 
