--- a/plugins/signalmonitor/CMakeLists.txt
+++ b/plugins/signalmonitor/CMakeLists.txt
@@ -35,6 +35,7 @@ if(GAMMARAY_BUILD_UI)
     signalhistorydelegate.cpp
     signalhistoryview.cpp
     signalmonitorclient.cpp
+    signalhistoryfavoritesview.cpp
   )
 
   gammaray_add_plugin(gammaray_signalmonitor_ui
