--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -30,6 +30,7 @@ set(gammaray_ui_srcs
   remoteviewwidget.cpp
   trailingcolorlabel.cpp
   helpcontroller.cpp
+  objectsfavoriteview.cpp
 
   paintanalyzerwidget.cpp
   paintanalyzerreplayview.cpp
@@ -78,7 +79,6 @@ set(gammaray_ui_srcs
   tools/objectinspector/applicationattributetab.cpp
   tools/objectinspector/bindingtab.cpp
   tools/objectinspector/stacktracetab.cpp
-  tools/objectinspector/objectsfavoriteview.cpp
   tools/problemreporter/problemreporterwidget.cpp
   tools/problemreporter/problemreporterclient.cpp
   tools/problemreporter/problemclientmodel.cpp
