Adapt to QSortFilterProxyModel changes in Qt 6.6
The private slots are gone in Qt 6.6. We can just use
QSortFilterProxyModel instead directly with Qt >= 5.10

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -52,6 +52,7 @@ set(gammaray_common_srcs
     remoteviewframe.cpp
     transferimage.cpp
     commonutils.cpp
+    recursiveproxymodelbase.cpp
 )
 
 add_library(
@@ -151,6 +152,7 @@ if(NOT GAMMARAY_PROBE_ONLY_BUILD)
         translator.h
         commonutils.h
         favoriteobjectinterface.h
+        recursiveproxymodelbase.h
     )
 
     ecm_generate_pri_file(
