--- a/docs/collection/CMakeLists.txt
+++ b/docs/collection/CMakeLists.txt
@@ -6,6 +6,7 @@
 #
 # Contact KDAB at <info@kdab.com> for commercial licensing options.
 #
+find_package(Qt${Qt_VERSION_MAJOR} NO_MODULE QUIET OPTIONAL_COMPONENTS Help ToolsTools)
 if(NOT TARGET Qt::qhelpgenerator)
     message(STATUS "qhelpgenerator not found, documentation collection will not be generated.")
     return()
