Port Qt3d plugin to Qt6

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -64,6 +64,6 @@ if(TARGET Qt::Positioning)
     add_subdirectory(positioning)
 endif()
 
-if(TARGET Qt5::3DRender AND TARGET Qt5::3DExtras)
+if(TARGET Qt::3DRender AND TARGET Qt::3DExtras)
     add_subdirectory(qt3dinspector)
 endif()
