Qt6: Fix quickmaterial test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -565,6 +565,18 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_add_quick_test(
             quickmaterialtest quickmaterialtest.cpp quickinspectortest.qrc $<TARGET_OBJECTS:modeltestobj>
         )
+        if(Qt_VERSION_MAJOR GREATER_EQUAL 6)
+            find_package(Qt6 COMPONENTS ShaderTools)
+            qt6_add_shaders(
+                quickmaterialtest
+                "quickmaterialtest_shaders"
+                PREFIX
+                "/"
+                FILES
+                "manual/shadereffect.vert"
+                "manual/shadereffect.frag"
+            )
+        endif()
         target_link_libraries(quickmaterialtest gammaray_core Qt::Quick Qt::QuickPrivate)
     endif()
 
