--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -211,7 +211,7 @@ if(NOT GAMMARAY_PROBE_ONLY_BUILD)
 else()
     install(TARGETS gammaray_core ${INSTALL_TARGETS_DEFAULT_ARGS})
 endif()
-if(MSVC)
+if(MSVC AND GAMMARAY_LIBRARY_TYPE STREQUAL SHARED)
     install(
         FILES "$<TARGET_PDB_FILE_DIR:gammaray_core>/$<TARGET_PDB_FILE_NAME:gammaray_core>"
         DESTINATION ${BIN_INSTALL_DIR}
