--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -12,18 +12,33 @@ if(NOT TARGET Qt::Quick)
 endif()
 
 # shared stuff
-set(gammaray_quickinspector_shared_srcs quickinspectorinterface.cpp quickitemgeometry.cpp
-                                        quickdecorationsdrawer.cpp materialextension/materialextensioninterface.cpp
+set(gammaray_quickinspector_shared_srcs
+
+    quickinspectorinterface.cpp
+    quickitemgeometry.cpp
+    quickdecorationsdrawer.cpp
+    materialextension/materialextensioninterface.cpp
 )
 
-add_library(gammaray_quickinspector_shared STATIC ${gammaray_quickinspector_shared_srcs})
-target_link_libraries(gammaray_quickinspector_shared gammaray_common Qt::Gui Qt::Quick)
+add_library(gammaray_quickinspector_shared STATIC
+    ${gammaray_quickinspector_shared_srcs}
+)
+target_link_libraries(gammaray_quickinspector_shared
+    gammaray_common
+    Qt::Gui
+    Qt::Quick
+)
 
-set_target_properties(gammaray_quickinspector_shared PROPERTIES POSITION_INDEPENDENT_CODE ON)
-target_compile_features(gammaray_quickinspector_shared PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
+set_target_properties(gammaray_quickinspector_shared PROPERTIES
+    POSITION_INDEPENDENT_CODE ON
+)
+target_compile_features(gammaray_quickinspector_shared PUBLIC
+    ${GAMMARAY_REQUIRED_CXX_FEATURES}
+)
 
 if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     set(gammaray_quickinspector_srcs
+
         quickinspector.cpp
         quickanchorspropertyadaptor.cpp
         quickitemmodel.cpp
@@ -33,9 +48,8 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     )
 
     if(NOT QT_NO_OPENGL)
-        list(
-            APPEND
-            gammaray_quickinspector_srcs
+        list(APPEND gammaray_quickinspector_srcs
+
             materialextension/materialextension.cpp
             materialextension/materialshadermodel.cpp
             materialextension/qquickopenglshadereffectmaterialadaptor.cpp
@@ -49,19 +63,18 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     gammaray_add_plugin(
         gammaray_quickinspector
         JSON
-        gammaray_quickinspector.json
+            gammaray_quickinspector.json
         SOURCES
-        ${gammaray_quickinspector_srcs}
+            ${gammaray_quickinspector_srcs}
     )
 
     if(NOT Qt5Quick_VERSION VERSION_LESS 5.7 OR TARGET Qt6::Quick)
-        target_sources(
-            gammaray_quickinspector PUBLIC ${CMAKE_CURRENT_LIST_DIR}/quickimplicitbindingdependencyprovider.cpp
+        target_sources(gammaray_quickinspector PUBLIC
+            ${CMAKE_CURRENT_LIST_DIR}/quickimplicitbindingdependencyprovider.cpp
         )
     endif()
 
-    target_link_libraries(
-        gammaray_quickinspector
+    target_link_libraries(gammaray_quickinspector
         gammaray_quickinspector_shared
         gammaray_core
         Qt::Quick
@@ -71,7 +84,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
 
     if(TARGET Qt::Gui_GLESv2)
         include(CheckCXXSourceCompiles)
-        set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} Qt::Gui_GLESv2)
+        list(APPEND CMAKE_REQUIRED_LIBRARIES Qt::Gui_GLESv2)
         check_cxx_source_compiles("int main() {return 0;}" CAN_LINK_GUI_GLESV2)
         if(CAN_LINK_GUI_GLESV2)
             set(HAVE_GLESv2 TRUE)
@@ -89,6 +102,7 @@ endif()
 if(GAMMARAY_BUILD_UI)
     # ui plugin
     set(gammaray_quickinspector_ui_srcs
+
         quickinspectorwidget.cpp
         quickinspectorclient.cpp
         quickclientitemmodel.cpp
@@ -106,18 +120,25 @@ if(GAMMARAY_BUILD_UI)
     )
 
     if(NOT QT_NO_OPENGL)
-        list(APPEND gammaray_quickinspector_ui_srcs geometryextension/sggeometrytab.cpp
-                geometryextension/sgwireframewidget.cpp
+        list(APPEND gammaray_quickinspector_ui_srcs
+
+            geometryextension/sggeometrytab.cpp
+            geometryextension/sgwireframewidget.cpp
         )
     endif()
 
     gammaray_add_plugin(
         gammaray_quickinspector_ui
         JSON
-        gammaray_quickinspector.json
+            gammaray_quickinspector.json
         SOURCES
-        ${gammaray_quickinspector_ui_srcs}
+            ${gammaray_quickinspector_ui_srcs}
     )
 
-    target_link_libraries(gammaray_quickinspector_ui gammaray_quickinspector_shared gammaray_ui Qt::Quick)
+    target_link_libraries(gammaray_quickinspector_ui
+        gammaray_quickinspector_shared
+        gammaray_ui
+        Qt::Quick
+    )
+
 endif()
