--- a/.codespellrc
+++ b/.codespellrc
@@ -1,4 +1,5 @@
 [codespell]
 skip = *.ts,./build-*,.git,./3rdparty,./cmake/ECM,format.config.uncrustify.4_spaces
 interactive = 3
-ignore-words-list = ba,statics,resetable,processinf,nnumber,trun,nam,uffer,therefrom
+#ignore camelCase, regardless. also mixed case words with correct spelling
+ignore-regex = \b([a-z]+[A-Z0-9][a-z0-9]*|Collet|Resetable|resetable|nam|statics|THEREFROM|uffer)\b
