buildsystem - improvements for building statemachineviewer plugin
add_subdirectory(statemachineviewer) if:
 1. Qt5 and QtScxml
 2. Qt6 and QtScxml and QtStateMachine

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -9,7 +9,11 @@
 if(TARGET Qt5::Core)
     add_subdirectory(codecbrowser)
 endif()
-add_subdirectory(statemachineviewer)
+if(TARGET Qt::Scxml)
+    if((QT_VERSION_MAJOR EQUAL 5) OR (QT_VERSION_MAJOR EQUAL 6 AND TARGET Qt6::StateMachine))
+        add_subdirectory(statemachineviewer)
+    endif()
+endif()
 add_subdirectory(eventmonitor)
 add_subdirectory(fontbrowser)
 add_subdirectory(kjobtracker)
