--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -476,6 +476,9 @@ find_package(Qt${QT_VERSION_MAJOR}IviCore 1.1 NO_MODULE QUIET) # 1.1 is based on
 find_package(Qt${QT_VERSION_MAJOR}IviVehicleFunctions 1.1 NO_MODULE QUIET)
 find_package(Qt${QT_VERSION_MAJOR}IviMedia 1.1 NO_MODULE QUIET)
 find_package(Qt${QT_VERSION_MAJOR}Scxml 5.8 NO_MODULE QUIET)
+if(QT_VERSION_MAJOR GREATER_EQUAL 6)
+    find_package(Qt${QT_VERSION_MAJOR}StateMachine NO_MODULE QUIET)
+endif()
 
 # if translation/doc host tools are missing, the Qt5 cmake config files throw errors...
 if(GAMMARAY_BUILD_DOCS)
@@ -493,9 +496,6 @@ if(QT_VERSION_MAJOR GREATER_EQUAL 6)
         # prevent 'file too big' and 'too many sections' errors with Qt6
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
     endif()
-    find_package(Qt${QT_VERSION_MAJOR}StateMachine NO_MODULE QUIET)
-else()
-    find_package(Qt${QT_VERSION_MAJOR}Scxml 5.8 NO_MODULE QUIET)
 endif()
 
 # these need to included after the last Qt-related find_package() call
